--- a/infrastructure/production/nginx/release.yaml
+++ b/infrastructure/production/nginx/release.yaml
@@ -12,6 +12,7 @@ spec:
         name: bitnami
         namespace: flux-system
       version: "5.6.14"
+      targetNamespace: non-existent-namespace
   interval: 1h0m0s
   install:
     remediation:
